# pgsubset

./: .gitignore  Cargo.toml  LICENSE  README.md  pgsubset.toml  sqlx-data.json
.github/workflows/: test.yml
src/: config.rs  graph.rs  lib.rs  main.rs  run.rs  sql.rs  transform.rs
tests/simple/: mod.rs
tests/simple/csv/: 00-table_1.csv  01-table_2.csv  02-table_3.csv
tests/simple/migrations/: 20220203100649_simple_test_case.sql
